--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 <h1>静夜思</h1>
-<p>床前明月光，,,,</p>
-<p>疑是地上霜。...</p>
+<p>床前明月光，</p>
+<p>疑是地上霜。</p>
 <p>举头望明月，</p>
 <p>低头思故乡。</p>
 </body>
