--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -12,7 +12,7 @@
         html{
             height: 100%;
         }
-        @keyframes myfirst {
+        @keyframes myfirst {   /* 规定动画 */
             from {opacity: 0}
             to {opacity: 100}
         }
