--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -19,10 +19,11 @@
         h1,p{
             animation: myfirst 2s infinite;
         }
-        audio
     </style>
 </head>
 <body>
+<audio src="bgm/bgm.wav" controls="controls" autoplay="autoplay">
+</audio>
 <h1>静夜思</h1>
 <p>床前明月光，</p>
 <p>疑是地上霜。</p>
