--- a/001Basics/page.html
+++ b/001Basics/page.html
@@ -19,7 +19,8 @@
     </script>
 </head>
 <body onload="audioAutoPlay('bgm')">
-<audio id="bgm" src="bgm/bgm.wav" preload="auto" autoplay="autoplay"></audio>
+<audio id="bgm" src="bgm/打雷.wav" preload="auto" autoplay="autoplay" loop="loop"></audio>
+
 <page id="c">春</page>
 <page id="x">夏</page>
 <page id="q">秋</page>
